2010-03-31  Martin Jambor  <mjambor@suse.cz>

	* gcc.dg/guality/inline-params.c: Disable early inlining.  Xfail run
	only with -O2, -O3 or -Os and not with -fwhopr.

2010-03-31  Dodji Seketeli  <dodji@redhat.com>

	PR c++/43558
	* g++.dg/template/typedef31.C: New test.

2010-03-31  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* g++.dg/ext/visibility/pragma-override1.C: Allow for .hidden in
	assembler output on *-*-solaris2*.
	* g++.dg/ext/visibility/pragma-override2.C: Likewise.

2010-03-31  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43557
	* gcc.dg/pr43557-1.c: New test.
	* gcc.dg/pr43557-2.c: New file.

2010-03-31  Jie Zhang  <jie@codesourcery.com>

	PR 43562
	* gcc.dg/pr43562.c: New test.

2010-03-30  Jason Merrill  <jason@redhat.com>

	PR c++/43076
	* g++.dg/template/error-recovery1.C: New.

	PR c++/41786
	* g++.dg/parse/ambig5.C: New.

2010-03-30  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43593
	* gcc.dg/guality/pr43593.c: New test.

2010-03-30  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/43430
	* gcc.dg/vect/pr43430-1.c: New.

2010-03-30  Jason Merrill  <jason@redhat.com>

	PR c++/43559
	* g++.dg/template/partial7.C: New.

2010-03-30  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* gcc.target/s390/stackcheck1.c: New testcase.

2010-03-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/43265
	* gfortran.dg/read_eof_8.f90: New test.

2010-03-29  Jason Merrill  <jason@redhat.com>

	* gcc.dg/cpp/include6.c: Change [] to ().

	N3077
	* c-c++-common/raw-string-1.c: Update handling of trigraphs, line
	splicing and UCNs.
	* c-c++-common/raw-string-2.c: Add trigraph test.
	* c-c++-common/raw-string-8.c: New.
	* c-c++-common/raw-string-9.c: New.
	* c-c++-common/raw-string-10.c: New.

	* c-c++-common/raw-string-1.c: Combine C and C++ raw string tests.
	* c-c++-common/raw-string-2.c: Combine C and C++ raw string tests.
	* c-c++-common/raw-string-3.c: Combine C and C++ raw string tests.