@@ -1,8 +1,10 @@
-/* Ensure there are no bizarre difficulties with accessing the 'isa' field of objects.  */
+/* Ensure there are no bizarre difficulties with accessing the 'isa' field of
+  objects.  This field is named differently between GNU and NeXT runtimes so
+  accessed via the CLASSPTRFIELD() macro defined in next-mapping.h */
 /* { dg-do compile } */
-/* { dg-xfail-if "PR23613" { "*-*-*" } { "*" } { "" } } */
 
 #include "../objc-obj-c++-shared/Object1.h"
+#include "../objc-obj-c++-shared/next-mapping.h"
 
 @interface Object (Test)
 - (Class) test1: (id)object;
@@ -15,11 +17,11 @@
 @implementation Object (Test)
 
 Class test1(id object) {
-  Class cls = object->isa;
+  Class cls = CLASSPTRFIELD(object);
   return cls;
 }
 - (Class) test1: (id)object {
-  Class cls = object->isa;
+  Class cls = CLASSPTRFIELD(object);
   return cls;
 }
 
@@ -28,18 +30,18 @@ Class test1(id object) {
 @implementation Derived
 
 Class test2(id object) {
-  Class cls = object->isa;
+  Class cls = CLASSPTRFIELD(object);
   return cls;
 }
 - (Class) test2: (id)object {
-  Class cls = object->isa;
+  Class cls = CLASSPTRFIELD(object);
   return cls;
 }
 
 @end
 
 Class test3(id object) {
-  Class cls = object->isa;
+  Class cls = CLASSPTRFIELD(object);
   return cls;
 }
 #include "../objc-obj-c++-shared/Object1-implementation.h"
